[gd_scene load_steps=3 format=3 uid="uid://bi4wo61kfv7dj"]

[ext_resource type="Script" uid="uid://bumbvu4o4vcpq" path="res://Wizard.gd" id="1_65sly"]
[ext_resource type="Texture2D" uid="uid://b75644u0m2fxa" path="res://Godot/Wizard.png" id="1_t5sql"]

[node name="Wizard" type="Node2D"]
script = ExtResource("1_65sly")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_t5sql")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SpellTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpellTimer" to="." method="_on_spell_timer_timeout"]
